# whisper-server

./: .gitignore  pyproject.toml  requirements.txt
src/: context.py  message_handlers.py  server.py  transcription_client.py  utils.py
src/models/: enums.py  messages.py  session.py
